flex/flex-tests/testData/js2_highlighting/CreateClassOrInterfaceAction12.js2
// "Create Class 'Foo'" "true"
class C {
  static function foo() {
    new <error descr="Unresolved type Foo">F<caret>oo</error>("1","2");
  }
}